# gpi_pack

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: tests.yml
src/gpi_pack/: TNutil.py  TarNet.py  __init__.py  diffusion.py  llm.py
test/: test_inference.py  test_llm.py
test/data/: hidden_0.pt  hidden_1.pt  test.pkl
